updated links to be under construction

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             </a>
         </div>
         <div class="recipe-images">
-            <a class="recipe-image-links" href="curry-goat.html">
+            <a class="recipe-image-links" href="">
                 <img src="images/icons8-galactic-100 (1).png" alt="">
-                <div class="image-caption">Galactic Nebula Soup</div>
+                <div class="image-caption">Galactic Nebula Soup (under construction)</div>
             </a>
         </div>
     </section>
