--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             </a>
         </div>
         <div class="recipe-images">
-            <a class="recipe-image-links" href="">
+            <a class="recipe-image-links" href="akee.html">
                 <img src="images/icons8-galactic-100 (1).png" alt="">
-                <div class="image-caption">Galactic Nebula Soup (under construction)</div>
+                <div class="image-caption">Akatonian sal pi</div>
             </a>
         </div>
     </section>
